--- a/KeyValium.Inspector/KeyValium.Inspector.csproj
+++ b/KeyValium.Inspector/KeyValium.Inspector.csproj
@@ -2,11 +2,25 @@
 
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFramework>net8.0-windows7.0</TargetFramework>
+    <TargetFramework>net8.0-windows8.0</TargetFramework>
     <UseWindowsForms>true</UseWindowsForms>
     <Configurations>Debug;Release;Performance;CallCounts</Configurations>
     <PlatformTarget>x64</PlatformTarget>
     <GenerateDocumentationFile>True</GenerateDocumentationFile>
+    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+    <Title>KeyValium.Inspector</Title>
+    <Version>0.5.0</Version>
+    <Authors>sebneu75</Authors>
+    <Description>A tool to inspect KeyValium databases.</Description>
+    <Copyright>(C) 2023</Copyright>
+    <PackageTags>keyvalium;database</PackageTags>
+    <PackageReleaseNotes>Initial release</PackageReleaseNotes>
+    <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
+    <PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
+    <IncludeSymbols>True</IncludeSymbols>
+    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
+    <PackAsTool>False</PackAsTool>
+    <ProduceReferenceAssembly>False</ProduceReferenceAssembly>
   </PropertyGroup>
 
   <ItemGroup>
