--- a/KeyValium.Inspector/KeyValium.Inspector.csproj
+++ b/KeyValium.Inspector/KeyValium.Inspector.csproj
@@ -6,10 +6,10 @@
     <UseWindowsForms>true</UseWindowsForms>
     <Configurations>Debug;Release;Performance;CallCounts</Configurations>
     <PlatformTarget>x64</PlatformTarget>
-    <GenerateDocumentationFile>True</GenerateDocumentationFile>
-    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+    <GenerateDocumentationFile>False</GenerateDocumentationFile>
+    <GeneratePackageOnBuild>False</GeneratePackageOnBuild>
     <Title>KeyValium.Inspector</Title>
-    <Version>0.5.0</Version>
+    <Version>0.5.2-beta</Version>
     <Authors>sebneu75</Authors>
     <Description>A tool to inspect KeyValium databases.</Description>
     <Copyright>(C) 2023</Copyright>
@@ -21,10 +21,11 @@
     <SymbolPackageFormat>snupkg</SymbolPackageFormat>
     <PackAsTool>False</PackAsTool>
     <ProduceReferenceAssembly>False</ProduceReferenceAssembly>
+    <PublishSingleFile>true</PublishSingleFile>
+    <SelfContained>false</SelfContained>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="HIC.System.Windows.Forms.DataVisualization" Version="1.0.1" />
     <PackageReference Include="System.Text.Encoding.CodePages" Version="6.0.0" />
   </ItemGroup>
 
