--- a/KeyValium/KeyValium.csproj
+++ b/KeyValium/KeyValium.csproj
@@ -19,8 +19,8 @@
     <Description>KeyValium is a very fast key value store for DotNet.</Description>
     <Authors>sebneu75</Authors>
     <PackageTags>database;nosql;embedded;persistence;key value store;</PackageTags>
-    <PackageReleaseNotes>added documentation
-renamed methods</PackageReleaseNotes>
+    <PackageReleaseNotes>improved page validation
+</PackageReleaseNotes>
     <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
     <PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
     <Copyright>Copyright (c) 2023</Copyright>
