Many improvements. Sharing modes work now.
- the sharing modes SharedNetwork and SharedLocal seem to work now (only available on Windows)
- fixed a bug in SharedPageProvider that could cause database corruption (cached pages where considered valid for too long)
- reworked the locking mechanisms for shared access (SharedLocal and SharedNetwork)
- PageAllocator releases the pages in Dispose
- PageAllocator.Dispose does additional checks (RefCount must be zero, checks that all allocated pages are deallocated)
- fixed locking mistakes in Transaction (order of nested locks)
- new method Transaction.CompactFreespace() to merge adjacent freespace entries.
- added DotNet 9 to target frameworks
- minor improvements

--- a/KeyValium.UnendingTestSharedController/KeyValium.UnendingTestSharedController.csproj
+++ b/KeyValium.UnendingTestSharedController/KeyValium.UnendingTestSharedController.csproj
@@ -2,12 +2,27 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net8.0</TargetFramework>
+    <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Private\private.json" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="Private\private.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="System.Management" Version="8.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\KeyValium.TestBench\KeyValium.TestBench.csproj" />
     <ProjectReference Include="..\KeyValium\KeyValium.csproj" />
   </ItemGroup>
 
