--- a/KeyValium.Inspector/KeyValium.Inspector.csproj
+++ b/KeyValium.Inspector/KeyValium.Inspector.csproj
@@ -2,19 +2,20 @@
 
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFramework>net8.0-windows8.0</TargetFramework>
+    <TargetFramework>net9.0-windows8.0</TargetFramework>
     <UseWindowsForms>true</UseWindowsForms>
     <Configurations>Debug;Release;Performance;CallCounts</Configurations>
     <PlatformTarget>x64</PlatformTarget>
     <GenerateDocumentationFile>False</GenerateDocumentationFile>
     <GeneratePackageOnBuild>False</GeneratePackageOnBuild>
     <Title>KeyValium.Inspector</Title>
-    <Version>0.5.2-beta</Version>
+    <Version>0.6.0</Version>
     <Authors>sebneu75</Authors>
     <Description>A tool to inspect KeyValium databases.</Description>
     <Copyright>(C) 2023</Copyright>
     <PackageTags>keyvalium;database</PackageTags>
-    <PackageReleaseNotes>Initial release</PackageReleaseNotes>
+    <PackageReleaseNotes>- range indicators in FileMap
+- updated version of KeyValium</PackageReleaseNotes>
     <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
     <PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
     <IncludeSymbols>True</IncludeSymbols>
